--- a/SimpleBuilder.WF/SimpleBuilder.WF.csproj
+++ b/SimpleBuilder.WF/SimpleBuilder.WF.csproj
@@ -8,4 +8,14 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="ReactiveUI" Version="18.4.26" />
+    <PackageReference Include="ReactiveUI.Events.Winforms" Version="15.1.1" />
+    <PackageReference Include="ReactiveUI.WinForms" Version="18.4.26" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Views\" />
+  </ItemGroup>
+
 </Project>
